2015-01-12 Massimo Manghi <mxmanghi@apache.org>
    * tests/redirect.test,channel.test: adding tests for new features of Rivet 2.2.1

2015-01-08 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: documenting the ::rivet::redirect command
    * doc/xml/directives.xml: add SeparateChannels directive documentation
    * src/rivetcmds/rivetInspect.c: add handling of SeparateChannels/separate_channels configuratio
    flag

2015-01-06 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: handling separate_channel flag to create virtual host specific
    Rivet channels
    * src/config/apache_config.c: handling SeparateChannels configuration directive

2015-01-05 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: adding macro APU_HANDLING for OS where apr-utils have a different installation
    directory
    * src/Makefile.am: new macro symbols APU_INCLUDES and APU_CFLAGS

2014-12-22 Massimo Manghi <mxmanghi@apache.org>
    * tests/headers.test: add test for command 'headers get'
    * src/Tclweb.h: new definition for functions TclWeb_OutputHeaders[Set|Get]
    * src/config/Tclwebapache.h: New functions TclWeb_OutputHeaders[Set|Get]
    * src/rivetcmds/rivetCore.c: new subcommand '::rivet::headers get'
    * tclconfig/libtool.m4: new script for libtool

2014-12-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/redirect.tcl: adding Damon's redirect command based on direct manipulation
    of the headers
    * src/rivetcmds/rivetCore.c: adding command [::rivet::headers sent] providing basic introspection
    for the I/O buffer internal status
    * src/apache-2/mod_rivet.c: moving Tcl_Flush from Rivet_ExecuteAndCheck to the very end of 
    Rivet_SendContent, avoiding multiple calls in case ::rivet::parse is called.
    * src/experimental: removing it from this branch. Threaded code will be developed in trunk for
    rivet 2.3

2014-08-04 Massimo Manghi <mxmanghi@apache.org>